force-app/main/default/objects/Account/fields/Has_Private_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Has_Private_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Private Contacts</label>
    <type>Checkbox</type>
</CustomField>