force-app/main/default/objects/Account/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service1</fullName>
            </value>
            <value>
                <fullName>Service2</fullName>
            </value>
            <value>
                <fullName>Service3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>