force-app/main/default/objects/Account/recordTypes/JohnsRT.recordType-meta.xml
<RecordType>
    <fullName>JohnsRT</fullName>
    <active>true</active>
    <label>JohnsRT</label>
</RecordType>