force-app/main/default/objects/Account/recordTypes/PalomaRT.recordType-meta.xml
<RecordType>
    <fullName>PalomaRT</fullName>
    <active>true</active>
    <label>PalomaRT</label>
</RecordType>